--- a/note/assignment.ipynb
+++ b/note/assignment.ipynb
@@ -257,7 +257,7 @@
       "    \n",
       "De kolomnamen van query_03: ['nameFirst', 'nameLast', 'tname']\n",
       "    \n",
-      "De kolomnamen van query_04: ['teamID', 'name', 'yearID', 'W', 'L']\n",
+      "De kolomnamen van query_04: ['teamID', 'name', 'yearID', 'W', 'L', 'MaxSalary']\n",
       "    \n",
       "De kolomnamen van query_05: ['teamID', 'name', 'yearID', 'rank']\n",
       "    \n",
@@ -765,7 +765,7 @@
        "\n",
        "Een speler speelt voor een team in een bepaald jaar wanneer deze speler datzelfde jaar betaald wordt door dat team. \n",
        "\n",
-       "Het resultaat bestaat uit teamID, naam, jaar en wins en losses in dat jaar.\n",
+       "Het resultaat bestaat uit teamID, naam, jaar, wins en losses in dat jaar en tenslotte het maximum salaris in dat team.\n",
        "\n",
        "Sorteer oplopend op teamID en dan oplopend op yearID.\n",
        "\n",
@@ -1080,7 +1080,7 @@
        "**Beschrijving**\n",
        "\n",
        "\n",
-       "Het resultaat van deze functie is een Pandas dataframe dat: de teamnaam bevat van het team dat het tweede meeste aantal spelers heeft die zijn opgenomen in de Hall of Fame.\n",
+       "Het resultaat van deze functie is een Pandas dataframe dat: de teamnaam bevat van het team (of de teams, indien meerdere) dat het meeste aantal spelers heeft die zijn opgenomen in de Hall of Fame.\n",
        "\n",
        "Van dit team willen we de teamID, naam en het aantal spelers opgenomen in de Hall of Fame.\n"
       ],
@@ -1126,7 +1126,7 @@
       "text/markdown": [
        "## 4. Hoe en wat in te dienen?\n",
        "\n",
-       "Nu je alle queries ingevuld (en hopelijk getest), ben je klaar om je taak in te dienen.\n",
+       "Nu je alle queries ingevuld (en hopelijk getest), ben je klaar om je taak in te dienen. De deadline wordt gecommuniceerd via Toledo.\n",
        "\n",
        "1. **Maak een leeg bestand** aan, en geef het de bestandsnaam met formaat: `achternaam_voornaam_studentennummer.py`.\n",
        "    - `achternaam` verwijst naar je achternaam, bijvoorbeeld `Janssens`\n",
@@ -1134,12 +1134,10 @@
        "    - `studentennummer` is je studentennummer zoals vermeld op je studentenkaart, bijvoorbeeld r0123456\n",
        "    -  Een goede bestandsnaam is dus bijvoorbeeld: `janssens_patrick_r0123456.py`\n",
        "\n",
-       "\n",
        "2. Kopieer **ALLE INGEVULDE FUNCTIES EN NIETS ANDERS** naar dit bestand. Het bevat dus _enkel en alleen_ de functies:\n",
        "    - query_01(connection, column_names)\n",
        "    - query_02(connection, column_names, datum_x='1980-01-16')\n",
        "    - etc, etc\n",
-       "\n",
        "\n",
        "3. **TIP**: voor de eerste 3 queries kan je je oplossing zelfs testen via de `verification.ipynb` notebook!\n",
        "    - Eerst worden je functies ingelezen vanuit het zonet aangemaakte bestand\n",
@@ -1152,14 +1150,12 @@
        "        - TP: True Positives\n",
        "        - TN: True Negatives\n",
        "        - FP: False Positives\n",
-       "    - Dit kan je helpen om je oplossing van de eerste 3 queries te debuggen, _en_ om zeker te zijn dat je `achternaam_voornaam_studentennummer.py` correct werkt.\n",
-       "    - Voor de overige 7 queries houden we de oplossingen geheim tot na de deadline.\n",
+       "    - Dit kan je helpen om je oplossing van de eerste 3 queries te debuggen, _en_ om zeker te zijn dat je `achternaam_voornaam_studentennummer.py` bestand correct werkt.\n",
+       "    - Voor de overige 7 queries houden we de oplossingen geheim tot na de deadline. Daar moet je dus zelf de resultaten inspecteren om jezelf ervan te overtuigen dat deze inderdaad correct zijn.\n",
        "        \n",
+       "4. Als je oplossing definitief is, submit je je `achternaam_voornaam_studentennummer.py` bestand via Toledo. De deadline wordt gecommuniceerd via Toledo.   \n",
        "\n",
-       "4. Als je oplossing definitief is, submit je je `achternaam_voornaam_studentennummer.py` via Toledo.     \n",
-       "\n",
-       "\n",
-       "5. Nogmaals, als finale submissie verwachten we dus enkel een python bestand (e.g., `achternaam_voornaam_studentennummer.py`) dat jullie ingevulde functies bevat en niks anders. Punt 3 zonet uitgelegd laat je toe om zelf te checken dat je bestand aan deze standaard voldoet. **Bijgevolg: eender welke afwijking van deze standaard is absoluut onacceptabel en zal als dusdanig behandeld worden.** \n"
+       "5. Nogmaals, als finale submissie verwachten we dus enkel een python bestand (e.g., `achternaam_voornaam_studentennummer.py`) dat jullie ingevulde functies bevat en niks anders. Zoals zonet uitgelegd laat de `verification.ipynb` notebook je toe om zelf te checken dat je bestand aan deze standaard voldoet. **Bijgevolg: eender welke afwijking van deze standaard is absoluut onacceptabel en zal als dusdanig behandeld worden.**  \n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
