--- a/note/assignment.ipynb
+++ b/note/assignment.ipynb
@@ -269,7 +269,7 @@
       "    \n",
       "De kolomnamen van query_09: ['teamID', 'tname', 'yearID', 'rank', 'HR']\n",
       "    \n",
-      "De kolomnamen van query_10: ['teamId', 'tname', 'HOFplayercount']\n",
+      "De kolomnamen van query_10: ['teamId', 'HOFplayercount']\n",
       "    \n"
      ]
     }
@@ -664,7 +664,7 @@
        "\n",
        "Het resultaat van deze functie is een Pandas dataframe met: de voornaam, achternaam, geboortejaar, geboortemaand, geboortedag van spelers die hun eerste major league appearance maakten na een gegeven *`datum_x`*. \n",
        "\n",
-       "Sorteer alfabetisch oplopend op achternaam.\n",
+       "Sorteer alfabetisch oplopend op achternaam en dan alfabetisch oplopend op voornaam.\n",
        "\n"
       ],
       "text/plain": [
@@ -711,9 +711,11 @@
        "\n",
        "**Beschrijving**\n",
        "\n",
-       "Het resultaat van deze functie is een Pandas dataframe dat, per club: de clubnaam en de voor- en achternaam van alle managers weergeeft, die ooit voor de club gewerkt hebben als playermanager. Per club mag een welbepaalde manager slechts 1 keer in het resultaat voorkomen. \n",
+       "Het resultaat van deze functie is een Pandas dataframe dat, per club: de voor- en achternaam van alle managers weergeeft, die ooit voor de club gewerkt hebben als playermanager. De derde kolom in dit dataframe bevat de bijhorende clubnaam.\n",
        "\n",
-       "Sorteer alfabetisch oplopend op clubnaam.\n",
+       "Per clubnaam mag een welbepaalde manager slechts 1 keer in het resultaat voorkomen. \n",
+       "\n",
+       "Sorteer achtereenvolgens alfabetisch oplopend op clubnaam, achternaam en voornaam.\n",
        "\n",
        "\n"
       ],
@@ -815,13 +817,13 @@
        "\n",
        "**Beschrijving**\n",
        "\n",
-       "Het resultaat van deze functie is een Pandas dataframe dat: alle teams bevat waar een (i.e., minstens 1) speler voor speelde die tussen `jaar_x` en `jaar_y` werd opgenomen in de Hall of Fame.\n",
+       "Het resultaat van deze functie is een Pandas dataframe dat: alle teams bevat waar een (i.e., minstens 1) speler voor speelde die tussen `jaar_x` en `jaar_y` (`jaar_x` en `jaar_y` horen dus niet bij dit interval!) werd opgenomen in de Hall of Fame.\n",
        "\n",
        "Een speler speelt voor een team in een bepaald jaar wanneer deze speler datzelfde jaar betaald wordt door dat team. \n",
        "\n",
-       "Het resultaat bestaat uit teamID, naam, jaar en de rang.\n",
+       "Het resultaat bestaat uit teamID, naam, jaar en de rang. Per jaar mag een bepaald team slechts eenmaal voorkomen in het resultaat.\n",
        "\n",
-       "Sorteer aflopend op jaar en een team slechts eenmaal voorkomt per jaar.\n",
+       "Sorteer oplopend op teamID, dan aflopend op jaar.\n",
        "\n",
        "\n"
       ],
@@ -873,7 +875,7 @@
        "\n",
        "Van deze personen willen we de playerID, voornaam en achternaam.\n",
        "\n",
-       "Sorteer aflopend op achternaam.\n",
+       "Sorteer aflopend op achternaam, dan aflopend op playerID.\n",
        "\n",
        "\n"
       ],
@@ -921,13 +923,13 @@
        "\n",
        "**Beschrijving**\n",
        "\n",
-       "Het resultaat van deze functie is een Pandas dataframe dat: alle personen bevat die voor een team speelden dat tussen `jaar_x` en `jaar_y` meer dan `n_wins` heeft behaald. Let op, we bedoelen hier het *totaal* aantal wins van een team in dat bepaalde interval tussen `jaar_x` en `jaar_y`, over de jaren heen dus.\n",
+       "Het resultaat van deze functie is een Pandas dataframe dat: alle personen bevat die ooit voor een team speelden dat tussen `jaar_x` en `jaar_y` (wederom; `jaar_x` en `jaar_y` horen niet bij dit interval) meer dan `n_wins` heeft behaald. Let op, we bedoelen hier het *totaal* aantal wins van een team in dat bepaalde interval tussen `jaar_x` en `jaar_y`, over de jaren heen dus. \n",
        "\n",
        "Een speler speelt voor een team in een bepaald jaar wanneer deze speler datzelfde jaar betaald wordt door dat team. \n",
        "\n",
-       "Van deze personen willen we de playerID, voornaam en achternaam en teamID.\n",
+       "Van deze personen willen we de playerID, voornaam en achternaam en teamID. Zorg er ook voor dat elke rij in het resulterend dataframe uniek is.\n",
        "\n",
-       "Sorteer oplopend op playerID.\n",
+       "Sorteer oplopend op playerID, dan oplopend op teamID.\n",
        "\n",
        "\n"
       ],
@@ -1080,9 +1082,15 @@
        "**Beschrijving**\n",
        "\n",
        "\n",
-       "Het resultaat van deze functie is een Pandas dataframe dat: de teamnaam bevat van het team (of de teams, indien meerdere) dat het meeste aantal spelers heeft die zijn opgenomen in de Hall of Fame.\n",
+       "Het resultaat van deze functie is een Pandas dataframe dat: de teamID bevat van het team (of de teams, indien meerdere) dat het meeste aantal spelers heeft die zijn opgenomen in de Hall of Fame.\n",
        "\n",
-       "Van dit team willen we de teamID, naam en het aantal spelers opgenomen in de Hall of Fame.\n"
+       "Het maakt niet uit wanneer die opname in de hall of fame precies plaatsvond.\n",
+       "\n",
+       "Ter verduidelijking: als we hierboven zeggen dat 'team y heeft speler x' bedoelen we indien speler x ooit voor team y gespeeld heeft. En, zoals voorheen reeds het geval: een speler speelt voor een team in een bepaald jaar wanneer deze speler datzelfde jaar betaald wordt door dat team. \n",
+       "\n",
+       "Van dit team willen we de teamID en het aantal spelers opgenomen in de Hall of Fame.\n",
+       "\n",
+       "Indien er meerdere teams zijn: sorteer aflopend op teamID.\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
