verification notebook reads all_q_params.json by default now

--- a/note/verification.ipynb
+++ b/note/verification.ipynb
@@ -58,9 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'verbind_met_GB' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a70df866d9de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# We verbinden met de gegevensbank\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mverbind_met_GB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musername\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhostname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'verbind_met_GB' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# STAP 01: Verbindingsobject aanmaken\n",
     "\n",
@@ -91,7 +103,9 @@
    "source": [
     "# STAP 03: Run je oplossingen\n",
     "\n",
-    "run_external_script(filename, c, params_fname=\"demo_q_params.json\")"
+    "params_filename = \"all_q_params.json\"\n",
+    "\n",
+    "run_external_script(filename, c, params_fname=params_filename)"
    ]
   },
   {
@@ -109,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(evaluate_script(filename,  params_fname=\"demo_q_params.json\"))"
+    "print(evaluate_script(filename,  params_fname=params_filename))"
    ]
   },
   {
